--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
     "next": "14.2.3",
+    "next-intl": "^3.12.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
