--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "react-quill": "^2.0.0",
+    "sharp": "^0.33.3",
     "zod": "^3.22.5"
   },
   "devDependencies": {
