--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "geist": "^1.3.0",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
+    "moment-timezone": "^0.5.45",
     "next": "14.2.3",
     "next-intl": "^3.12.2",
     "react": "^18",
