--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cropperjs": "^1.6.2",
     "geist": "^1.3.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash.debounce": "^4.0.8",
     "lottie-react": "^2.4.0",
     "moment-timezone": "^0.5.45",
     "next": "14.2.3",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-avatar-editor": "^13.0.2",
