--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,less,md}\""
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.2.0",
+    "@dnd-kit/sortable": "^9.0.0",
     "@formkit/drag-and-drop": "^0.1.6",
     "@stianlarsen/react-ui-kit": "^1.1.15",
     "cropperjs": "^1.6.2",
@@ -39,7 +41,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.1",
     "typescript": "^5"
   }
 }
