--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@formkit/drag-and-drop": "^0.1.6",
     "@stianlarsen/react-ui-kit": "^1.1.15",
     "cropperjs": "^1.6.2",
+    "date-fns": "^4.1.0",
     "geist": "^1.3.1",
     "jsonwebtoken": "^9.0.2",
     "lodash.debounce": "^4.0.8",
