--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,23 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "error",
+    "react/react-in-jsx-scope": "off",
+    "no-undef": "off",
+    "no-shadow": "off",
+    "no-unused-vars": "off",
+    "import/named": "warn",
+    "jsx-a11y/ no-static-element-interactions": "off",
+    "react/jsx-boolean-value": "warn",
+    "@typescript-eslint/no-non-null-asserted-optional-chain": "off",
+    "prefer-template": "warn",
+    "jsx-a11y/no-static-element-interactions": "warn",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unsafe-function-type": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "@typescript-eslint/no-unused-expressions": "off"
+  }
 }
