--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "build": "next build",
     "start": "next start -p 3001",
     "lint": "next lint",
+    "lint2": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,less,md}\""
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.2.0",
+    "@dnd-kit/sortable": "^9.0.0",
     "@formkit/drag-and-drop": "^0.1.6",
     "@stianlarsen/react-ui-kit": "^1.1.15",
     "cropperjs": "^1.6.2",
+    "date-fns": "^4.1.0",
     "geist": "^1.3.1",
     "jsonwebtoken": "^9.0.2",
     "lodash.debounce": "^4.0.8",
@@ -20,6 +24,7 @@
     "moment-timezone": "^0.5.45",
     "next": "14.2.5",
     "next-intl": "^3.12.2",
+    "next-recaptcha-v3": "^1.5.0",
     "react": "^18",
     "react-avatar-editor": "^13.0.2",
     "react-cropper": "^2.3.3",
@@ -37,9 +42,11 @@
     "@types/react": "^18",
     "@types/react-avatar-editor": "^13.0.2",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.1",
     "typescript": "^5"
   }
 }
