--- a/package.json
+++ b/package.json
@@ -11,42 +11,41 @@
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,less,md}\""
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.2.0",
+    "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^9.0.0",
-    "@formkit/drag-and-drop": "^0.1.6",
-    "@stianlarsen/react-ui-kit": "^1.1.15",
-    "cropperjs": "^1.6.2",
+    "@stianlarsen/react-ui-kit": "^1.1.16",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
+    "cropperjs": "^2.0.0",
     "date-fns": "^4.1.0",
-    "geist": "^1.3.1",
     "jsonwebtoken": "^9.0.2",
     "lodash.debounce": "^4.0.8",
-    "lottie-react": "^2.4.0",
-    "moment-timezone": "^0.5.45",
-    "next": "14.2.5",
-    "next-intl": "^3.12.2",
-    "next-recaptcha-v3": "^1.5.0",
+    "lottie-react": "^2.4.1",
+    "moment-timezone": "^0.6.0",
+    "next": "15.3.3",
+    "next-intl": "^4.0.0",
+    "next-recaptcha-v3": "^1.5.2",
+    "react": "^19.1.0",
     "react-avatar-editor": "^13.0.2",
     "react-cropper": "^2.3.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
-    "sass": "^1.77.1",
-    "sharp": "^0.33.4",
-    "zod": "^3.22.5"
+    "sass": "^1.89.1",
+    "sharp": "^0.34.2",
+    "zod": "^3.25.56"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.6",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/react-avatar-editor": "^13.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.18.0",
-    "@typescript-eslint/parser": "^8.18.0",
-    "eslint-config-next": "14.2.2",
-    "prettier": "^3.4.1",
-    "@types/node": "^20.14.8",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.5"
+    "@types/node": "^20.19.0",
+    "@types/react": "^19.1.6",
+    "@types/react-avatar-editor": "^13.0.4",
+    "@types/react-dom": "^19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
+    "eslint": "^9.28.0",
+    "eslint-config-next": "15.3.3",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3"
   }
 }
