--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "15.3.3",
     "next-intl": "^4.0.0",
     "next-recaptcha-v3": "^1.5.2",
+    "quill": "^2.0.2",
     "react": "^19.1.0",
     "react-avatar-editor": "^13.0.2",
     "react-cropper": "^2.3.3",
